--- a/cortex/logger/logging_config.yaml
+++ b/cortex/logger/logging_config.yaml
@@ -25,6 +25,15 @@ handlers:
    backupCount: 20
    encoding: utf8
    
+  publisher_consumer_log_handler:
+   class: logging.handlers.RotatingFileHandler
+   level: DEBUG
+   formatter: simple
+   filename: logs/publisher_consumer.log
+   maxBytes: 10485760
+   backupCount: 20
+   encoding: utf8
+   
   api_log_handler:
    class: logging.handlers.RotatingFileHandler
    level: DEBUG
@@ -98,6 +107,12 @@ handlers:
    encoding: utf8
 
 loggers:
+
+  cortex.publisher_consumer:
+   level: INFO
+   handlers: [console, error_file_handler, publisher_consumer_log_handler]
+   propagate: no
+   
   cortex.database:
    level: INFO
    handlers: [console, error_file_handler, database_log_handler]
