RabbitMQ installtion fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     # Set hostname
     hostname: messagequeue
     
+    privileged: true
+    
     # IMPORTANT! Image not specified to ensure generics and light weightness;
     # to make sure only one place is controlling messagequeue type - 
     # it's being installed based on installtion file configured by environment variable
