Add exmple.mind.gz for tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 # Mind Files
 *.mind
 *.mind.gz
-example.mind
-example.mind.gz
 sample.mind
 sample.mind.gz
 cortex/sample.mind
+!example.mind
+!example.mind.gz
 
 # Data Directory
 data/
