--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.2
 mccabe==0.6.1
+mock==4.0.2
 more-itertools==7.2.0
 numpy==1.17.4
 packaging==19.2
