--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ install:
   - pip install -r requirements.txt
 script:
   - pytest --cov-report term --cov=cortex
+services: mongodb
 after_success:
   - codecov
