--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
   - pip install -r requirements.txt
 script:
   - pytest --cov-report term --cov=cortex
-services: mongodb
+services:
+  - mongodb
+  - rabbitmq
 after_success:
   - codecov
