--- a/travis.yml
+++ b/travis.yml
@@ -1,3 +1,5 @@
 services: mongodb
 before_script:
   - sudo /etc/init.d/mongod start
+  - echo 'Asia/Jerusalem' | sudo tee /etc/timezone
+  - sudo dpkg-reconfigure --frontend noninteractive tzdata
