--- a/travis.yml
+++ b/travis.yml
@@ -1,4 +1,7 @@
 services: mongodb
+before_install:
+  - export TZ=Asia/Jerusalem
+  - date
 before_script:
   - sudo /etc/init.d/mongod start
   # Change time zone to Israel/Jerusalem
