--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install -r requirements.txt
 env:
   global:
+    - export TZ=Asia/Jerusalem
     - RABBITMQ_NODE_IP_ADDRESS="0.0.0.0"
 script:
   - pytest --cov-report term --cov=cortex
