--- a/travis.yml
+++ b/travis.yml
@@ -2,6 +2,7 @@ services: mongodb
 before_install:
   - export TZ="Asia/Jerusalem"
   - date
+install: skip
 before_script:
   # Start DataBase
   - sudo /etc/init.d/mongod start
