--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
   - "3.8"
-install:
-  - pip install -r requirements.txt
+before_install:
   - pip install codecov
+install:
+  - pip install -r requirements.txt  
 env:
   global:
     - export TZ="Asia/Jerusalem"
